--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "15.4.0-canary.27",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "20.10.8",
